# gears-singularity

./: README.md
Singularity/development/: gears-singularity.general-dev  gears-singularity.slurm  gears-singularity.ubuntu-bionic
Singularity/general_use/: GEARS-general.def  gear-singularity.general  gears-singularity.devel  gears-singularity.general  gears-singularity.tls
Singularity/specialized_use/: gears-singularity.cloudcompare  gears-singularity.lastools  gears-singularity.pdal  gears-singularity.pdal16  gears-singularity.pdald  gears-singularity.pdaldocker  gears-singularity.taudem  gears-singularity.tls  gears-singularity.treeseg  gears-singularity.treeseg-dev
additional_data/general_use/mmap/: DESCRIPTION
additional_data/slurm/: slurm_functions.sh
additional_data/taudem/: taudem_ubuntu.sh
additional_data/treeseg/: CMakeLists.txt
general_use/: GEARS-general.def
singularity-definitions/courses/: Singularity.grad778-f19-module-09
singularity-definitions/development/: Singularity.gears-cloudcompare  Singularity.gears-computree  Singularity.gears-general-R35  Singularity.gears-general-artful  Singularity.gears-general-bionic  Singularity.gears-general-eoan  Singularity.gears-general-focal  Singularity.gears-lidR  Singularity.gears-pdal  Singularity.gears-rfsrc-openmpi  Singularity.gears-slurm  Singularity.gears-taudem  Singularity.gears-tls  Singularity.gears-treeseg-burt  Singularity.gears-treeseg-calders  Singularity.gears-treeseg-greenberg  Singularity.test_theo  gears-singularity.slurm
singularity-definitions/general_use/: Singularity.gears-general
singularity-definitions/specialized_use/: Singularity.gears-general-xenial  Singularity.gears-lastools  Singularity.gears-nres701a-s18  Singularity.gears-pdal  Singularity.gears-tls_fuels
singularity_additional_data/general_use/mmap/src/: mmap.c
